---
source: crates/ruff/src/rules/flake8_async/mod.rs
---
ASYNC100.py:7:5: ASYNC100 Async functions should not call blocking HTTP methods
  |
7 | async def foo():
8 |     urllib.request.urlopen("http://example.com/foo/bar").read()
  |     ^^^^^^^^^^^^^^^^^^^^^^ ASYNC100
  |

ASYNC100.py:11:5: ASYNC100 Async functions should not call blocking HTTP methods
   |
11 | async def foo():
12 |     requests.get()
   |     ^^^^^^^^^^^^ ASYNC100
   |

ASYNC100.py:15:5: ASYNC100 Async functions should not call blocking HTTP methods
   |
15 | async def foo():
16 |     httpx.get()
   |     ^^^^^^^^^ ASYNC100
   |

ASYNC100.py:19:5: ASYNC100 Async functions should not call blocking HTTP methods
   |
19 | async def foo():
20 |     requests.post()
   |     ^^^^^^^^^^^^^ ASYNC100
   |

ASYNC100.py:23:5: ASYNC100 Async functions should not call blocking HTTP methods
   |
23 | async def foo():
24 |     httpx.post()
   |     ^^^^^^^^^^ ASYNC100
   |


